openshift/application/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spring-petclinic
  annotations:
    argocd.argoproj.io/sync-wave: "1"
