openshift/application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-petclinic
  namespace: spring-petclinic
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  ports:
    - name: http
      targetPort: app-port
      port: 8080
  selector:
    app: spring-petclinic
  type: ClusterIP
