openshift/application/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: spring-petclinic
  namespace: spring-petclinic
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  host: spring-petclinic.dso-poc-cluster-ecf58268eb10995f067698dffc82d2a7-0000.eu-gb.containers.appdomain.cloud
  to:
    kind: Service
    name: spring-petclinic
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
